Minimal navbar changes
infelizmente esta dificil a vida de front end dev

--- a/PP3/Site.Master
+++ b/PP3/Site.Master
@@ -24,7 +24,7 @@
           <li class="nav-item active"><a href="index.aspx" class="nav-link pl-0">Home</a></li>
           <li class="nav-item"><a href="medico.aspx" class="nav-link">Médico</a></li>
           <li class="nav-item"><a href="secretaria.aspx" class="nav-link">Secretaria</a></li>
-          <li class="nav-item"><a href="paciente.aspx" class="nav-link">Paciente</a></li>
+          <li class="nav-item"><a href="login.aspx" class="nav-link">Paciente</a></li>
         </ul>
         <div class="ml-auto">
           <form action="#" method="get" class="probootstrap-search-form mb-sm-0 mb-3">
