--- a/PP3/u/secretario/secretario.Master
+++ b/PP3/u/secretario/secretario.Master
@@ -49,9 +49,9 @@
         </div>
     </form>
     </center>
-            <script src="js/jquery.min.js"></script>
+            <script src="../../js/jquery.min.js"></script>
          <!--JavaScript Bootstrap-->
-        <script src="js/bootstrap.js"></script>
+        <script src="../../js/bootstrap.js"></script>
 </body>
 </body>
 </html>
