LoginSelec bonitasso agora

--- a/PP3/Login.Master
+++ b/PP3/Login.Master
@@ -28,10 +28,10 @@
 
       <div class="collapse navbar-collapse" id="probootstrap-nav">
         <ul class="navbar-nav m-auto" style="margin-top: 0;">
-          <li class="nav-item active"><a href="index.html" class="nav-link pl-0">Home</a></li>
-          <li class="nav-item"><a href="m.aspx" class="nav-link">Médico</a></li>
-          <li class="nav-item"><a href="s.aspx" class="nav-link">Secretário</a></li>
-          <li class="nav-item"><a href="p.aspx" class="nav-link">Paciente</a></li>
+          <li class="nav-item active"><a href="index.aspx" class="nav-link pl-0">Home</a></li>
+          <li class="nav-item"><a href="medico.aspx" class="nav-link">Médico</a></li>
+          <li class="nav-item"><a href="secretaria.aspx" class="nav-link">Secretário</a></li>
+          <li class="nav-item"><a href="LoginSelec.aspx" class="nav-link">Paciente</a></li>
         </ul>
         <div class="ml-auto">
           <form action="#" method="get" class="probootstrap-search-form mb-sm-0 mb-3">
@@ -47,7 +47,7 @@
       </div>
     </div>
   </nav>
-   </br>
+
     <center>
     <form id="form1" runat="server">
         <div>
