--- a/PP3/Login.Master
+++ b/PP3/Login.Master
@@ -11,7 +11,7 @@
     <style>
         body
         {
-            background-color: #1f5ec4;
+            background-color: ;
         }        
 
         </style>
