--- a/PP3/Login.Master
+++ b/PP3/Login.Master
@@ -31,7 +31,7 @@
           <li class="nav-item active"><a href="index.aspx" class="nav-link pl-0">Home</a></li>
           <li class="nav-item"><a href="medico.aspx" class="nav-link">Médico</a></li>
           <li class="nav-item"><a href="secretaria.aspx" class="nav-link">Secretário</a></li>
-          <li class="nav-item"><a href="LoginSelec.aspx" class="nav-link">Paciente</a></li>
+          <li class="nav-item"><a href="Login.aspx" class="nav-link">Paciente</a></li>
         </ul>
         <div class="ml-auto">
           <form action="#" method="get" class="probootstrap-search-form mb-sm-0 mb-3">
