--- a/PP3/u/medico/Medico.Master
+++ b/PP3/u/medico/Medico.Master
@@ -35,8 +35,9 @@
           </form>
         </div>
           <ul class="navbar-nav mr-auto">
-            <li class="nav-item"><a href="l.aspx" class="nav-link">
-        <asp:Label ID="Username" runat="server" Text=""></asp:Label></a></li>
+            <li class="nav-item">
+                <a href="../../index.aspx"><asp:Label ID="Username" runat="server" Text=""></asp:Label></a> 
+            </li>
         </ul>
       </div>
     </div>
