--- a/PP3/u/medico/Medico.Master
+++ b/PP3/u/medico/Medico.Master
@@ -36,7 +36,9 @@
         </div>
           <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-                <a href="../../index.aspx"><asp:Label ID="Username" runat="server" Text=""></asp:Label></a> 
+                <a href="../../index.aspx" class="nav-link  accordion=====">
+                    <asp:Label ID="Username" runat="server" Text=""></asp:Label>
+                </a> 
             </li>
         </ul>
       </div>
