--- a/PP3/u/secretario/secretario.Master
+++ b/PP3/u/secretario/secretario.Master
@@ -24,7 +24,7 @@
           <li class="nav-item active"><a href="index.aspx" class="nav-link pl-0">Home</a></li>
           <li class="nav-item"><a href="cadastro.aspx" class="nav-link">Cadastro</a></li>
           <li class="nav-item"><a href="agenda.aspx" class="nav-link">Agendamento</a></li>
-            <li class="nav-item"><a href="especialidades.aspx" class="nav-link">Especialidades</a></li>
+            <li class="nav-item"><a href="Relatorios.aspx" class="nav-link">Relatórios</a></li>
         </ul>
         <div class="ml-auto">
           <form action="#" method="get" class="probootstrap-search-form mb-sm-0 mb-3">
