--- a/PP3/u/paciente/Paciente.Master
+++ b/PP3/u/paciente/Paciente.Master
@@ -4,7 +4,10 @@
 
 <html>
 <head runat="server">
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+
+<meta http-equiv="x-ua-compatible" content="ie=edge">
+<meta name="viewport" content="width=1024, initial-scale=1">
+<meta name="description" content="">
     <link href="../../css/bootstrap.css" rel="stylesheet" />
     <link href="../../css/style.css" rel="stylesheet" />
     <title></title>
