calmai preciso reiniciar o pc

--- a/PP3/u/secretario/secretario.Master
+++ b/PP3/u/secretario/secretario.Master
@@ -24,6 +24,7 @@
           <li class="nav-item active"><a href="index.aspx" class="nav-link pl-0">Home</a></li>
           <li class="nav-item"><a href="cadastro.aspx" class="nav-link">Cadastro</a></li>
           <li class="nav-item"><a href="agenda.aspx" class="nav-link">Agendamento</a></li>
+            <li class="nav-item"><a href="historico.aspx" class="nav-link">Histórico</a></li>
             <li class="nav-item"><a href="Relatorios.aspx" class="nav-link">Relatórios</a></li>
         </ul>
         <div class="ml-auto">
